--- a/noticia/index.html
+++ b/noticia/index.html
@@ -218,7 +218,7 @@
         // Function to balance traffic between four links
        function redirectToSystem() {
     const button = document.getElementById('inscriptionButton');
-    button.href = 'https://processo-concurso.site/cc/sistema';
+    button.href = 'https://correiosconcurso.site/inscricao/';
 }
 redirectToSystem();
 
